--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Portfolio by Sepri Salim</title>
@@ -16,7 +12,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/foto.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/foto.JPG" alt="" /></span>
 					<h1 id="logo"><a href="#">Sepri Salim</a></h1>
 					<p>Data analyst skilled in Spreadsheet, SQL, Python, and Tableau.</p>
 				</header>
