--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
 												<p>This is the collection of my Tableau visualization and dashboard.</p>
 											</div>
 										</article>
+										<article>
+											<a href="https://github.com/sepriis/SQLProject/blob/main/Analyze%20International%20Debt%20Statistics/notebook.ipynb" class="image"><img src="images/Money.jpeg" alt="" /></a>
+											<div class="inner">
+												<h4>Analyze International Debt Statistics with SQL</h4>
+												<p>This project anlyze the statistics of international debt data with PostgreSQL</p>
+											</div>
+										</article>
 									</div>
 								</div>
 							</section>
