--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Hello! My name is Sepri Salim, currently I work as field operator/technician at an SOE engaged in natural gas processing. I hold an associate degree and currently pursuing my bachelor degree of Industrial Engineering in Binus University.<br>I'm highly self-motivated and goal-oriented and currently pursuing a long-term career change in data analytics. With my work experience, it is understandable that I posses strong analytical and problem-solving skills, adaptability, and ability to follow through with projects from inception to completion.</p>
+									<p>Hello! My name is Sepri Salim, currently I work as field operator/technician at an SOE engaged in natural gas processing. I hold an associate degree and currently pursuing my bachelor degree of Industrial Engineering in Binus University.<br>I'm highly self-motivated and goal-oriented and currently pursuing a long-term career change in data analytics. Possessing strong technical skills rooted in work experience as field operator/technician.</p>
 								</div>
 							</section>
 
