--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<p></p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">SQL, Python</li>
-										<li class="icon solid fa-toolbox">BigQuery, Git, Google Collab, Jupyter, Spreadsheet, Tableau</li>
+										<li class="icon solid fa-toolbox">BigQuery, Google Collab, Jupyter, Spreadsheet, Tableau</li>
 										<li class="icon solid fa-microscope">Exploratory Data Analysis (EDA), Descriptive Statistics, Data Visualization, Correlation Analysis, Cohort, Clustering, Regression</li>
 									</ul>
 								</div>
