--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 											</div>
 										</article>
 										<article>
+											<a href="https://github.com/sepriis/PythonProjects/blob/main/Project%20TMDB%20Movies.ipynb" class="image"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/89/Tmdb.new.logo.svg/1200px-Tmdb.new.logo.svg.png" alt="" /></a>
+											<div class="inner">
+												<h4>Exploratory Data Analysis of TMDB Dataset</h4>
+												<p>This project explore and analyze The Movie Database Dataset using Python.</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://docs.google.com/presentation/d/1Guh6Le4_FdKJjqYwKvSNr8CtZjm7Xwq9lmELcGjUlto/edit?usp=sharing" class="image"><img src="images/bikeshare.webp" alt="" /></a>
 											<div class="inner">
 												<h4>Data Exploration with SQL</h4>
