--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 											<a href="https://drive.google.com/file/d/1HDDp4bwObc11wA-CHmAzqoGQRTqvz2k6/view?usp=sharing" class="image"><img src="images/Churn-Prediction-scaled.jpeg" alt="" /></a>
 											<div class="inner">
 												<h4>Predicting Churn with Logistic Regression</h4>
-												<p>Explore, analyze, and build a logistic regression model to predict customers churn using Python library Scikit-Learn.</p>
+												<p>Explore, analyze, and build a logistic regression model to predict customers churn of an internet provider dataset using Python library Scikit-Learn.</p>
 											</div>
 										</article>
 										<article>
@@ -96,7 +96,7 @@
 											<a href="https://docs.google.com/presentation/d/1Guh6Le4_FdKJjqYwKvSNr8CtZjm7Xwq9lmELcGjUlto/edit?usp=sharing" class="image"><img src="images/bikeshare.webp" alt="" /></a>
 											<div class="inner">
 												<h4>Data Exploration with SQL</h4>
-												<p>This project used BigQuery to explore Bike Share San Francisco data. </p>
+												<p>This project used BigQuery to explore Bike Share San Francisco dataset. </p>
 											</div>
 										</article>
 										<article>
