--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p>Hello! My name is Sepri Salim, currently I work as field operator/technician at an SOE engaged in natural gas processing. I hold an associate degree and currently pursuing my bachelor degree of Industrial Engineering in Binus University.<br>I'm highly self-motivated and goal-oriented and currently pursuing a long-term career change in data analytics. Possessing strong technical skills rooted in work experience as field operator/technician.</p>
+									<p>Hello! My name is Sepri Salim, I hold an associate degree in mechanical engineering and currently pursuing my bachelor degree in Industrial Engineering.<br>
+										Currently I work as a field operator/technician at an SOE compay engaged in natural gas processing. I'm highly self-motivated, goal-oriented, and possessing strong technical skills rooted in work experience as field operator/technician.<br>
+										I'm passionate in learning new things and determined to improve my technical skills in data analytics and recently completed a 3-months full stack data analytics program from RevoU with acceptance rate <10%.<br>
+										Comfortable with end-to-end data analytics, from defining and translating business problems, gathering, processing, and analyzing data into actionable items, and delivering results. 
+									</p>
 								</div>
 							</section>
 
