--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 									<header class="major">
 										<h3>About Me</h3>
 									</header>
-									<p align="justify">Hello! My name is Sepri Salim, I hold an associate degree in mechanical engineering and currently pursuing my bachelor degree in Industrial Engineering.<br>
+									<p align="justify">Hello! My name is Sepri Salim, I hold an associate degree in mechanical engineering and currently pursuing my bachelor degree in Industrial Engineering. 
 										Currently I work as a field operator/technician at an SOE company engaged in natural gas processing. I'm highly self-motivated, goal-oriented, and possessing strong technical skills rooted in work experience as field operator/technician.<br>
-										I'm passionate in learning new things and determined to improve my technical skills in data analytics and recently completed a 3-months full stack data analytics program from RevoU with acceptance rate <10%.<br>
+										I'm passionate in learning new things and determined to improve my technical skills in data analytics and recently completed a 3-months full stack data analytics program from RevoU with acceptance rate <10%. 
 										Comfortable with end-to-end data analytics, from defining and translating business problems, gathering, processing, and analyzing data into actionable items, and delivering results. 
 									</p>
 								</div>
