--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 									<h3>Things I Can Do</h3>
 									<p></p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">SQL, Python</li>
-										<li class="icon solid fa-toolbox">BigQuery, Google Collab, Jupyter, PostgreSQL, Spreadsheet, Tableau</li>
-										<li class="icon solid fa-microscope">Exploratory Data Analysis (EDA), Descriptive Statistics, Data Visualization, Correlation Analysis, Cohort, Clustering, Regression</li>
+										<li class="icon solid fa-code">SQL, Python (Libraries: Pandas, Numpy, Matplotlib, Seaborn, Scikit-learn)</li>
+										<li class="icon solid fa-toolbox">BigQuery, Google Collab, GitHub, Jupyter Notebook, MySQL, PostgreSQL, Spreadsheets, Tableau</li>
+										<li class="icon solid fa-microscope">Exploratory Data Analysis (EDA), Descriptive Statistics, Data Visualization, Correlation Analysis, Cohort, Clustering, Regression, Data Modelling, Data Mapping, Entity Relational Diagram (ERD)</li>
 									</ul>
 								</div>
 							</section>
